# ISPilot

./: LICENSE  netlify.toml  pyproject.toml  requirements.txt
api/: __init__.py
api/static/: style.css
api/templates/: logs.html  painel.html
