[project]
name = "ai-agents-v2"
version = "0.1.0"
description = "AI agent for Web Total"
authors = [
    {name = "Rafa Queiroz",email = "rafa@theailabs.co"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "langchain (>=0.3.14,<0.4.0)",
    "openai (>=1.59.8,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "werkzeug (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
